# llm-prod-course

./: .gitignore  LICENSE  README.md
other/: .env.example  Modelfile  cli.py  getting_killed_lite.md  pyproject.toml  requirements.in  requirements.txt
other/docs/: spain.md
week1/exercise-forum/: commands.txt  surfer_personality.txt
week1/exercise5/: .gitignore  README.md  docker-compose.yml  requirements.md  tasks.md
week1/exercise5/archive/: tasks-baseline.md
week1/exercise5/backend/: Dockerfile  main.py  pyproject.toml
week1/exercise5/frontend/: app.js  index.html  style.css
