[project]
name = "other"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.14.1",
    "certifi>=2026.6.17",
    "chromadb>=1.5.9",
    "distro>=1.9.0",
    "dotenv>=0.9.9",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.18",
    "jiter>=0.16.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "python-dotenv>=1.2.2",
    "sniffio>=1.3.1",
    "tqdm>=4.68.4",
    "typing-extensions>=4.16.0",
    "typing-inspection>=0.4.2",
    "collections-manager",
]

[tool.uv.sources]
collections-manager = { path = "/home/manuel/projects/ludo-engsoft/week-02/collections-manager", editable = true }
